Button Alignment Fixes

--- a/Django WebApp/static/style/base.css
+++ b/Django WebApp/static/style/base.css
@@ -58,12 +58,17 @@ body {
     transition: all 0.4s;
   }
   .notifier{
+    background-color: #ef6603;
+    color: #fff;
     position: fixed;
     outline: none;
     border: none;
-    background-color: transparent;
-    right: 15px;
-    bottom: 70px;
+    width: 24%;
+    padding: 5px;
+    border-radius: 15px;
+    font-size: 20px;
+    left: 38%;
+    bottom: 10px;
     z-index: 99887;
   }
   .notifier:focus{
@@ -98,6 +103,13 @@ body {
     }
     .msg_call{
       font-size: 15px;
+    }
+    .notifier{
+      width: 80%;
+      left: 10%;
+    }
+    .back-to-top{
+      bottom: 50px;
     }
   }
   
